tags/2013-08-29_cppreference/Archive/c7d11a94da2f3f8173b047799a5f3f80-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘int main()’:
main.cpp:17:22: error: invalid initialization of non-const reference of type ‘double&’ from an rvalue of type ‘double’
 sum=getSum(a, 5, 10.0);
                      ^
main.cpp:8:8: error: in passing argument 3 of ‘double getSum(const double*, int, double&)’
 double getSum(const double a[], int size, double& threshold);
        ^
